--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.3.11",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5",
     "vuetify": "^3.4.9"
   },
